--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <title>sweeper3000 on GitHub</title>
  <meta name="charset" content="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="theme-color" content="#000">
 </head>
 <body>
  <h1>sweeper3000 on GitHub</h1>
