--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
  <link rel="stylesheet" href="style.css">
+ <link href='http://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Black+Ops+One' rel='stylesheet' type='text/css'>
  <title>sweeper3000 on GitHub</title>
  <meta name="charset" content="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
