--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
  <p>Check out my project pages:</p>
  <ul>
   <li><strong>Scratchpad: </strong>A scratchpad built with Material Design <a href="http://sweeper3000.github.io/Scratchpad">Visit</a></li>
-  <li><strong>HTML Template: </strong>A dead simple template with everything you need to get started <a href="http://sweeper3000.github.io/HTML-Template">Visit</a>
+  <li><strong>HTML Template: </strong>A dead simple template with everything you need to get started <a href="http://sweeper3000.github.io/HTML-Template">Visit</a></li>
+  <li><strong>AutoCSS: </strong>A CSS file to get you started, fast. <a href="http://sweeper3000.github.io/AutoCSS/">Visit</a></li>
  </ul>
 </body>
 </html>
