Add links and convert them to https

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
  <h2>My Projects</h2>
  <p>Check out my project pages:</p>
  <ul>
-  <li><strong>Scratchpad: </strong>A scratchpad built with Material Design <a href="http://sweeper3000.github.io/Scratchpad">Visit</a></li>
-  <li><strong>HTML Template: </strong>A dead simple template with everything you need to get started <a href="http://sweeper3000.github.io/HTML-Template">Visit</a></li>
-  <li><strong>AutoCSS: </strong>A CSS file to get you started, fast. <a href="http://sweeper3000.github.io/AutoCSS/">Visit</a></li>
+  <li><strong>Scratchpad: </strong>A scratchpad built with Material Design <a href="https://sweeper3000.github.io/Scratchpad">Visit</a></li>
+  <li><strong>HTML Template: </strong>A dead simple template with everything you need to get started <a href="https://sweeper3000.github.io/HTML-Template">Visit</a></li>
+  <li><strong>AutoCSS: </strong>A CSS file to get you started, fast. <a href="https://sweeper3000.github.io/AutoCSS/">Visit</a></li>
+  <li><strong>Blog: </strong>See my blog <a href="https://sweeper3000.github.io/blog">here</a></li>
+  <li><strong>Excuses: </strong>A script that selects an excuse at random from a list and prints it. <a href="https://sweeper3000.github.io/excuses">Visit</a></li>
  </ul>
 </body>
 </html>
