--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <li><strong>AutoCSS: </strong>A CSS file to get you started, fast. <a href="https://sweeper3000.github.io/AutoCSS/">Visit</a></li>
   <li><strong>Blog: </strong>See my blog <a href="https://sweeper3000.github.io/blog">here</a></li>
   <li><strong>Excuses: </strong>A script that selects an excuse at random from a list and prints it. <a href="https://sweeper3000.github.io/excuses">Visit</a></li>
+  <li><strong>ThankYouCard: </strong>A Java program that prints a thank you note for a gift. <a href="https://github.com/sweeper3000/ThankYouCard">Visit</a></li>
  </ul>
 </body>
 </html>
