--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <link rel="stylesheet" href="style.css">
- <link href='http://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Black+Ops+One' rel='stylesheet' type='text/css'>
+ <link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Black+Ops+One' rel='stylesheet' type='text/css'>
  <title>sweeper3000 on GitHub</title>
  <meta name="charset" content="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,7 @@
 <body>
  <h1>sweeper3000 on GitHub</h1>
  <h2>My Projects</h2>
+ <!--<p id="bitbucket"><b><a href="https://sweeper3000.bitbucket.io">Check out my Bitbucket website</a></b></p>-->
  <p>Check out my project pages:</p>
  <ul>
   <li><strong>Scratchpad: </strong>A scratchpad built with Material Design <a href="https://sweeper3000.github.io/Scratchpad">Visit</a></li>
