Change pgp-fingerprint description

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <p>Check out my project pages:</p>
  <ul>
   <li><strong>Scratchpad: </strong>A scratchpad built with Material Design <a href="https://sweeper3000.github.io/Scratchpad">Visit</a></li>
-  <li><strong>pgp-fingerprint: </strong>Only relevent if I sent you there. Fingerprint in readme. <a href="https://github.com/sweeper3000/pgp-fingerprint">Visit</a></li>
+  <li><strong>pgp-fingerprint: </strong>This repo contains fingerprints of my PGP keys, including my git signing key. <a href="https://github.com/sweeper3000/pgp-fingerprint">Visit</a></li>
   <li><strong>AutoCSS: </strong>A CSS file to get you started, fast. <a href="https://sweeper3000.github.io/AutoCSS/">Visit</a></li>
   <li><strong>Blog: </strong>See my blog <a href="https://sweeper3000.github.io/blog">here</a></li>
   <li><strong>Excuses: </strong>A script that selects an excuse at random from a list and prints it. <a href="https://sweeper3000.github.io/excuses">Visit</a></li>
