add entry for W5HGen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><strong>Blog: </strong>See my blog <a href="https://sweeper3000.github.io/blog">here</a></li>
   <li><strong>Excuses: </strong>A script that selects an excuse at random from a list and prints it. <a href="https://sweeper3000.github.io/excuses">Visit</a></li>
   <li><strong>ThankYouCard: </strong>A Java program that prints a thank you note for a gift. <a href="https://github.com/sweeper3000/ThankYouCard">Visit</a></li>
+  <li><strong>W5HGen: </strong>A python script that helps make a list for W5H: Who, What, When, Where, Why, How. <a href="https://github.com/sweeper3000/W5HGen">Visit</a></li>
  </ul>
 </body>
 </html>
