add projects i've contributed to section

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
   <li><strong>W5HGen: </strong>A python script that helps make a list for W5H: Who, What, When, Where, Why, How. <a href="https://github.com/sweeper3000/W5HGen">Visit</a></li>
   <li><strong>CanadaCharter: </strong>An Android app that displays the Canadian Charter of Rights and Freedoms, catagorized. <a href="https://github.com/sweeper3000/CanadaCharter">Visit</a></li>
  </ul>
+ <h2>Projects I Have Contributed to</h2>
+ <ul>
+  <li><strong>tldr: </strong>Simplified man pages <a href="https://github.com/tldr-pages/tldr/commits/master?author=sweeper3000">My Contributions</a></li>
+ </ul>
 </body>
 </html>
