--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <li><strong>ThankYouCard: </strong>A Java program that prints a thank you note for a gift. <a href="https://github.com/sweeper3000/ThankYouCard">Visit</a></li>
   <li><strong>W5HGen: </strong>A python script that helps make a list for W5H: Who, What, When, Where, Why, How. <a href="https://github.com/sweeper3000/W5HGen">Visit</a></li>
   <li><strong>CanadaCharter: </strong>An Android app that displays the Canadian Charter of Rights and Freedoms, catagorized. <a href="https://github.com/sweeper3000/CanadaCharter">Visit</a></li>
+  <li><strong>initvpn: </strong>A bash script that installs Algo VPN and Outline VPN. <a href="https://github.com/sweeper3000/initvpn">Visit</a></li>
  </ul>
  <h2>Projects I have Contributed to</h2>
  <ul>
