add entry for initserver

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li><strong>W5HGen: </strong>A python script that helps make a list for W5H: Who, What, When, Where, Why, How. <a href="https://github.com/sweeper3000/W5HGen">Visit</a></li>
   <li><strong>CanadaCharter: </strong>An Android app that displays the Canadian Charter of Rights and Freedoms, catagorized. <a href="https://github.com/sweeper3000/CanadaCharter">Visit</a></li>
   <li><strong>initvpn: </strong>A bash script that installs Algo VPN and Outline VPN. <a href="https://github.com/sweeper3000/initvpn">Visit</a></li>
+  <li><strong>initserver: </strong>A bash script that sets up a linux server to my personal standards. <a href="https://github.com/sweeper3000/initserver">Visit</a></li>
  </ul>
  <h2>Projects I have Contributed to</h2>
  <ul>
